2000-12-13 22:04 GMT+1 Maurilio Longo <maurilio.longo@libero.it>
   * source/vm/estack.c
     + added missing semicolons (lines 374 and 416)

2000-12-12 17:35 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * source/vm/eval.c
     + Corrected support for block passed by reference.

     /* Ryszard, is there any reason to use hb_stackItemFromBase(1) instead of pItem? */

2000-12-12 17:10 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * makefile.bc
   * hb_slex.bc
     * Changed to include new source\vm\estack.c

   * include/hbextern.ch
     * Changed HB_PVALUE() to __PVALUE()

2000-12-12 21:15 GMT -3 Luiz Rafael Culik <culik@sl.conex.net>

*utils/hbmake/hbmake.prg
    *Some clean ups
    *Parameter checking is faster now
    *Fixed some small bugs regarding to OS2 and GCC support

2000-12-12 21:25 UTC+0100 Ryszard Glab <rglab@imid.med.pl>

TAGged all files with 'old-eval-stack' tag before commiting changes

    *include/hbstack.h
    *source/vm/estack.c
        *new files with the eval stack code

    *include/hbapi.h
    *include/hbvm.h
    *source/rdd/dbcmd.c
    *source/rdd/dbfcdx/dbfcdx1.c
    *source/rdd/dbfntx/dbfntx1.c
    *source/rtl/errorapi.c
    *source/vm/arrays.c
    *source/vm/arrayshb.c
    *source/vm/asort.c
    *source/vm/classes.c
    *source/vm/codebloc.c
    *source/vm/debug.c
    *source/vm/eval.c
    *source/vm/extend.c
    *source/vm/fm.c
    *source/vm/garbage.c
    *source/vm/hvm.c
    *source/vm/itemapi.c
    *source/vm/macro.c
    *source/vm/pcount.c
    *source/vm/proc.c
        *changed to support the new eval stack code
        *added #include "hbstack.h" when hb_stack.Return was used

NOTE! some modules still use a direct access to the eval stack
      internal architecture (hb_stack.pItems) - mostly in
      function/messages names lookup code

    *source/vm/Makefile
        *added estack.c

    *source/rdd/dbfntx/Makefile
        *added dbfntx1.c

    *source/vm/pvalue.c
    *tests/multiarg.prg
        *renamed HB_PVALUE to __PVALUE