@@ -47,15 +47,9 @@ HB_FUNC( EVAL )
    {
       USHORT uiPCount = hb_pcount();
       USHORT uiParam;
-      PHB_ITEM pBlock = hb_stackItemFromBase( 1 );
-
-      if( HB_IS_BYREF( pBlock ) )
-      {
-         pBlock = hb_itemUnRef( pBlock );
-      }
 
       hb_vmPushSymbol( &hb_symEval );
-      hb_vmPush( pBlock );
+      hb_vmPush( pItem );
       /* NOTE: hb_param() function cannot be used for parameter access
        * because we need to pass the references too.
        * hb_param() is dereferencing the passed parameters
