@@ -1,3 +1,7 @@
+2000-12-14 17:00 UTC+0800 Ron Pinkas <ron@profit-master.com>
+   * source/vm/eval.c
+     * Removed unneeded hb_stackItemFromBase(1), reverted to use pItem obtained by hb_param()
+
 2000-12-13 22:04 GMT+1 Maurilio Longo <maurilio.longo@libero.it>
    * source/vm/estack.c
      + added missing semicolons (lines 374 and 416)
